Add sandbox page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,11 +6,18 @@
 
 @keyframes fadeOut {
   0% {
-    display: none;
     opacity: 1;
   }
   100% {
-    display: block;
     opacity: 0;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
