--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,20 +4,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@keyframes fadeOut {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
+.rdrDefinedRangesWrapper {
+  display: none;
 }
